--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
         exclude group: 'org.apache.httpcomponents'
     }
 
+    compile 'joda-time:joda-time:2.9.9'
+
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
