--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     }
 
     compile 'joda-time:joda-time:2.9.9'
+    compile 'com.android.support:cardview-v7:26.1.0'
 
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
